test/badLhs5.slq

def main(){
	x:=vector(10,0:ğ”¹);
	(x[0],x[1])[0]=1:ğ”¹; /// error
}
